--- a/slideshow.html
+++ b/slideshow.html
@@ -18,13 +18,13 @@
     </nav>
 </header>
 <div id="deck">
-	<section>
+    <section>
         <hgroup>
             <h1>Hello, interwebs explorer.</h1>
             <h2>How to use this thing</h2>
         </hgroup>
         <p>Press the right arrow, down arrow, or spacebar to advance; press the left arrow or up arrow to move backward.</p>
-		<p>You can also click the left and right arrows in the control bar at the top.</p>
+        <p>You can also click the left and right arrows in the control bar at the top.</p>
     </section>
     <section>
         <hgroup>
@@ -32,9 +32,9 @@
             <h2>I'm calling these "actions"</h2>
         </hgroup>
         <p>You can hide/reveal content within the slides by giving something a class of "action". Actions are revealed in the order in which they occur in the HTML. Advancing to the next slide will first reveal actions on the page if they exist.</p>
-		<pre>
+        <pre>
 &lt;p class=&quot;action&quot;&gt;This will be hidden when the slide loads&lt;/p&gt;
-		</pre>	
+        </pre>  
         <ul>
             <li class="action">Bullet point</li>
             <li class="action">Another bullet point</li>
@@ -48,20 +48,20 @@
             <h2>These may or may not be useful</h2>
         </hgroup>
         <p>When a new slide is loaded, a "newSlide" event is fired, containing the number of the slide.</p>
-		<p>There's also an event triggered when a new "action" is revealed. (Take look at your console.)</p>
-		<p></p>
-		<pre>
+        <p>There's also an event triggered when a new "action" is revealed. (Take look at your console.)</p>
+        <p></p>
+        <pre>
 //Example usage
 $(&#x27;html&#x27;).bind(&#x27;newSlide&#x27;, function(e,id) { console.log(id) });
-		</pre>
+        </pre>
     </section>
-	<section>
+    <section>
         <hgroup>
             <h1>Building slides</h1>
             <h2>It's easy</h2>
         </hgroup>
         <p>Each slide goes within a <code>section</code> element, like this:</p>
-		<pre>
+        <pre>
 &lt;section&gt;
     &lt;hgroup&gt;
         &lt;h1&gt;Your heading&lt;/h1&gt;
@@ -69,22 +69,22 @@ $(&#x27;html&#x27;).bind(&#x27;newSlide&#x27;, function(e,id) { console.log(id) 
     &lt;/hgroup&gt;
     &lt;p&gt;All your slide content...&lt;/p&gt;
 &lt;/section&gt;
-		</pre>
-		<p>You don't have to worry about numbering the slides. The script will count the number of <code>section</code> elements and give each one a numbered ID on page load.</p>
+        </pre>
+        <p>You don't have to worry about numbering the slides. The script will count the number of <code>section</code> elements and give each one a numbered ID on page load.</p>
     </section>
     <section>
         <hgroup>
             <h1>Other details</h1>
             <h2>Small stuff</h2>
         </hgroup>
-		<p>The hash updates with each slide.</p>
-		<p>The slideshow itself has 3 dependencies: jQuery, htmlSlides.js, and a stylesheet.</p>
-		<p>The slide script has one option, the option to hide the menu bar at the top:</p>
-		<pre>
+        <p>The hash updates with each slide.</p>
+        <p>The slideshow itself has 3 dependencies: jQuery, htmlSlides.js, and a stylesheet.</p>
+        <p>The slide script has one option, the option to hide the menu bar at the top:</p>
+        <pre>
 sliderInit({hideMenu: true});
-		</pre>
+        </pre>
     </section>
-	<section>
+    <section>
         <hgroup>
             <h1>That's all</h1>
         </hgroup>
@@ -94,7 +94,7 @@ sliderInit({hideMenu: true});
 </div>
 <!-- /deck -->
 <script src="resources/jquery-1.4.2.min.js"></script>
-<script src="resources/htmlSlides.js"></script>
+<script src="resources/jquery.easing.1.3.js"></script>
 <script>
 //This is just to demo the custom events
 $('html').bind('newSlide', function(e,id) { console.log('New slide event, slide number ' + id)});
