--- a/slideshow.html
+++ b/slideshow.html
@@ -88,13 +88,22 @@ sliderInit({hideMenu: true});
         <hgroup>
             <h1>That's all</h1>
         </hgroup>
-        <p>Get it at <a href="http://github.com/robflaherty/html-slideshow">github</a>.</p>
-        <p>- Rob Flaherty / <a href="http://twitter.com/ravelrumba">@ravelrumba</a> / <a href="mailto:rob@ravelrumba.com">rob@ravelrumba.com</a></p>
+        <p>Get it at <a href="http://github.com/nqnwebs/html-slideshow">github</a>.</p>
+        <p>- Martín Gaitán / <a href="http://twitter.com/nqnwebs">@ravelrumba</a> / <a href="mailto:martin@nqnwebs.com">martin@nqnwebs.com</a></p>
     </section>
 </div>
 <!-- /deck -->
+<footer>
+  <p> A demo presentation </p>
+  <address class="vcard">
+   <a href="http://twitter.com/nqnwebs">@nqnwebs</a>
+  </address>
+ 
+</footer>
+
+
 <script src="resources/jquery-1.4.2.min.js"></script>
-<script src="resources/jquery.easing.1.3.js"></script>
+<script src="resources/htmlSlides.js"></script>
 <script>
 //This is just to demo the custom events
 $('html').bind('newSlide', function(e,id) { console.log('New slide event, slide number ' + id)});
