--- a/slideshow.html
+++ b/slideshow.html
@@ -89,7 +89,8 @@ sliderInit({hideMenu: true});
             <h1>That's all</h1>
         </hgroup>
         <p>Get it at <a href="http://github.com/nqnwebs/html-slideshow">github</a>.</p>
-        <p>- Martín Gaitán / <a href="http://twitter.com/nqnwebs">@ravelrumba</a> / <a href="mailto:martin@nqnwebs.com">martin@nqnwebs.com</a></p>
+        <p>Original work - Rob Flaherty / <a href="http://twitter.com/ravelrumba">@ravelrumba</a> / <a href="mailto:rob@ravelrumba.com">rob@ravelrumba.com</a></p>
+        <p>This is a fork by Martín Gaitán <a href="http://twitter.com/nqnwebs">@nqnwebs</a> / <a href="mailto:martin@nqnwebs.com">martin@nqnwebs.com</a></p>
     </section>
 </div>
 <!-- /deck -->
