prevents multiple triggering before effect is done

--- a/slideshow.html
+++ b/slideshow.html
@@ -35,11 +35,11 @@
         <pre>
 &lt;p class=&quot;action&quot;&gt;This will be hidden when the slide loads&lt;/p&gt;
         </pre>  
-        <ul>
-            <li class="action">Bullet point</li>
-            <li class="action">Another bullet point</li>
-            <li class="action">Yet another bullet point</li>
-            <li class="action">You get the idea</li>
+        <ul class="incremental">
+            <li>Bullet point</li>
+            <li>Another bullet point</li>
+            <li>Yet another bullet point</li>
+            <li>You get the idea</li>
         </ul>
     </section>
     <section>
